--- a/Source/Portality.Common/Portality.Common.csproj
+++ b/Source/Portality.Common/Portality.Common.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Extensions\PortalityHtmlHelper.cs" />
     <Compile Include="Extensions\RegularExtensions.cs" />
     <Compile Include="Helpers\SessionManager.cs" />
+    <Compile Include="Performance\MonitorDurationAttribute.cs" />
+    <Compile Include="Performance\PerformanceExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routing\AreaLowerCaseRoute.cs" />
     <Compile Include="Routing\LowerCaseRoute.cs" />
